@@ -7,6 +7,9 @@
 #        scope-asyn module based on Zen's general scope support.
 #
 #==============================================================
+tag:R1.2.14  29-Oct-2025  P. Nisperos (pnispero)
+        Add ioc build test
+
 tag:R1.2.13  28-Oct-2025  P. Nisperos (pnispero)
         fix problem 1
 
